# agimus_controller

./: .gitignore  .mergify.yml  .pre-commit-config.yaml  CMakeLists.txt  README.md  flake.nix
agimus_controller_doc/: README.md  conf.py  default.nix  pyproject.toml
agimus_controller_doc/agimus_controller_doc/: __init__.py  cli.py
agimus_controller_doc/docs/: conf.py  index.md  requirements.txt
agimus_controller_doc/docs/api/: ActivationModelExp.md  ActivationModelQuadExp.md  ActivationModelWeightedQuad.md  CostModelResidual.md  CostModelSumItem.md  ResidualDistanceCollision.md  ResidualDistanceCollision2.md  ResidualModelControl.md  ResidualModelControlGrav.md  ResidualModelFramePlacement.md  ResidualModelFrameRotation.md  ResidualModelFrameTranslation.md  ResidualModelFrameVelocity.md  ResidualModelState.md  index.md  ocp_croco_generic.md
agimus_controller_doc/docs/general/: usage.md
agimus_controller_examples/: debug_ocp.py  default.nix  package.xml  read_from_bag_trajectory.py  setup.py
agimus_controller_examples/agimus_controller_examples/: hpp_interface.py  mpc_search.py
agimus_controller_examples/agimus_controller_examples/hpp_panda/: planner.py  scenes.py
agimus_controller_examples/agimus_controller_examples/main/: servers.py
agimus_controller_examples/agimus_controller_examples/main/panda/: main_hpp_mpc.py
agimus_controller_examples/agimus_controller_examples/utils/: ocp_analyzer.py  read_from_bag_trajectory.py  replay_mpc_offline.py  set_models_and_mpc.py  wrapper_meshcat.py
agimus_controller_examples/scripts/: dummy_mpc_test.py  ocp_generic_tests.py  robot_model_display_with_env.py
agimus_controller_examples/scripts/resources/: environment.xacro
(+124 files in other folders)
